terraform/modules/vent/main.tf
resource "azurerm_virtual_network" "app-vent" {
  name                = var.vent_name
  location            = var.location
  resource_group_name = var.resource_group_name
  address_space       = [var.address_space]

}

resource "azurerm_subnet" "aks" {
  name                 = "aks-subnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.app-vent.name
  address_prefixes     = [var.aks_subnet_prefix]
  depends_on = [ azurerm_virtual_network.app-vent ]
}

resource "azurerm_subnet" "db" {
  name                 = "db-subnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.app-vent.name
  address_prefixes     = [var.db_subnet_prefix]
  delegation {
    name = "db-delegation"
    service_delegation {
      name = "Microsoft.DBforPostgreSQL/flexibleServers"
      actions = ["Microsoft.Network/virtualNetworks/subnets/action",]
    }
    }
  depends_on = [ azurerm_virtual_network.app-vent ]
}

resource "azurerm_subnet" "vm" {
  name                 = "vm-subnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.app-vent.name
  address_prefixes     = [var.vm_subnet_prefix]
  depends_on = [ azurerm_virtual_network.app-vent ]
}

resource "azurerm_network_security_group" "vm_nsg" {
  name                = "vm-ui-nsg"
  location            = var.location
  resource_group_name = var.resource_group_name

  security_rule {
    name                       = "Allow-RDP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "Allow-HTTP"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "Allow-SSH"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

}
resource "azurerm_subnet_network_security_group_association" "vm_subnet_asssco" {
  subnet_id                 = azurerm_subnet.vm.id
  network_security_group_id = azurerm_network_security_group.vm_nsg.id
  depends_on = [ azurerm_subnet.vm,
                azurerm_network_security_group.vm_nsg ]

}

# resource "azurerm_network_interface" "db_vm_ni" {
#   name                = "db_vm-nic"
#   location            = var.location
#   resource_group_name = var.resource_group_name

#   ip_configuration {
#     name                          = "internal"
#     subnet_id                     = azurerm_subnet.vm.id
#     private_ip_address_allocation = "Dynamic"
#     public_ip_address_id = azurerm_public_ip.db_vm_public_ip.id
#   }
# }

# resource "azurerm_public_ip" "db_vm_public_ip" {
#   name                = "acceptanceTestPublicIp1"
#   resource_group_name = var.resource_group_name
#   location            = var.location
#   allocation_method   = "Static"

#   tags = {
#     environment = "Production"
#   }
# }
